--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
 		},
 		"version-check": {
             "host": "forumhulp.com",
-            "directory": "/ext",
-            "filename": "index.php?id=63"
+            "directory": "/versioncheck",
+            "filename": "google-custom-search-engine-cse"
 		}
 	}
 }
